--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT= 5000
 dbUrl=mongodb+srv://laraproject1:Anjaneyaa@cluster0.0olng.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # SALT_ROUNDS = 10
-# JWT_SECRET = "FDFLKNLIJO99409IT49J"
+# JWT_SECRET = "FDFLKNLIJO99409IT49J" mongodb+srv://laraproject1:Anjaneyaa@cluster0.0olng.mongodb.net/
 # EMAIL= 'pestcontrol633@gmail.com'
 # EMAIL_PASSWORD= 'acof axql bhdv yats'
 # baseURL = http://192.168.1.34:4000
